# diwa-sync

./: Cargo.toml  README.md  deploy.sh
src/: config.rs  lib.rs  main.rs  merge.rs  peer.rs  state.rs
tests/: merge_test.rs
